--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             "assets": [
               "src/favicon.ico",
               "src/favicon.png",
-              "src/assets"
+              "src/assets",
+              "src/data"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
@@ -84,7 +85,8 @@
             "assets": [
               "src/favicon.ico",
               "src/favicon.png",
-              "src/assets"
+              "src/assets",
+              "src/data"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
